# Spa7ven

./: CMakeLists.txt  MANUAL.md  README.md  plan.md
huawei_vector/reference/bf/: README.md  sol.md
huawei_vector/reference/compact/: sol.md
include/ann/: common.hpp  index_hnsw.hpp  index_lsh.hpp  metric.hpp  pipeline.hpp  pipeline_factory.hpp  preprocess.hpp  reranker_raw.hpp  scorer_sq.hpp  sq.hpp  topk.hpp
tests/: sanity_test.cpp
